k8s/01-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quepid
  labels:
    app: quepid
spec:
  selector:
    matchLabels:
      app: quepid
  replicas: 2
  template:
    metadata:
      labels:
        app: quepid
    spec:
      containers:
        - name: quepid
          image: o19s/quepid:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "550m"
              memory: "500Mi"
            limits:
              cpu: "650m"
              memory: "500Mi"
          imagePullPolicy: Always
#          livenessProbe:
#            httpGet:
#              path: /status
#              port: 9000
#            initialDelaySeconds: 10
#          readinessProbe:
#            httpGet:
#              path: /status
#              port: 9000
#            initialDelaySeconds: 10
      restartPolicy: Always
