k8s/02-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: quepid
  namespace: quepid
spec:
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: quepid
