k8s/03-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quepid
  namespace: quepid
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "<your-domain>-letsencrypt"
spec:
  tls:
    - hosts:
        - "<your-domain>"
      secretName: "<your-domain>-tls"
  rules:
    - host: "<your-domain>"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: quepid
                port:
                  number: 80
